<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="screen_title">My Nanodegee Apps!</string>
    <string name="button_popular_movies">POPULAR MOVIES</string>
    <string name="button_stock_hawk">STOCK HAWK</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_app_material">MAKE YOU APP MATERIAL</string>
    <string name="button_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="button_capstone">CAPSTONE</string>
</resources>
