<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bealc.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_title"
        android:text="@string/screen_title"
        android:textSize="24sp"
        android:textIsSelectable="false"
        android:textColor="#016b61"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_popular_movies"
        android:id="@+id/button_popular_movies"
        android:textSize="16sp"
        android:layout_below="@+id/screen_title"
        android:layout_alignLeft="@+id/button_app_material"
        android:layout_alignStart="@+id/button_app_material"
        android:layout_marginTop="30dp"
        android:background="#009688"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_stock_hawk"
        android:id="@+id/button_stock_hawk"
        android:textSize="16sp"
        android:layout_below="@+id/button_popular_movies"
        android:layout_alignLeft="@+id/button_popular_movies"
        android:layout_alignStart="@+id/button_popular_movies"
        android:background="#009688"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:textSize="16sp"
        android:layout_below="@+id/button_stock_hawk"
        android:layout_alignLeft="@+id/button_stock_hawk"
        android:layout_alignStart="@+id/button_stock_hawk"
        android:background="#009688"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_app_material"
        android:id="@+id/button_app_material"
        android:layout_below="@+id/button_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:background="#009688"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_go_ubiquitous"
        android:id="@+id/button_go_ubiquitous"
        android:layout_below="@+id/button_app_material"
        android:layout_alignRight="@+id/button_stock_hawk"
        android:layout_alignEnd="@+id/button_stock_hawk"
        android:textSize="16sp"
        android:background="#009688"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_go_ubiquitous"
        android:layout_alignLeft="@+id/button_build_it_bigger"
        android:layout_alignStart="@+id/button_build_it_bigger"
        android:textSize="16sp"
        android:background="#E65100"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF" />
</RelativeLayout>